--- a/main.tex
+++ b/main.tex
@@ -34,10 +34,8 @@
 	advantage
 ]{cryptocode}
 \usepackage{tabularx}
-
-\newtheorem{definition}{Definition}[chapter]
-\newtheorem{theorem}{Theorem}[chapter]
-\newtheorem{secgame}{Attack Game}[chapter]
+% TODO add code (package minted)
+% \usepackage{minted}
 
 \begin{document}
 
@@ -46,6 +44,7 @@
 \newcommand\Supervisor{Dr. Philipp Jovanovic}
 \newcommand\Degree{MSc in Information Security}
 
+\input{commands}
 
 \onehalfspacing
 \input{title}
