minor change to the system diagram

--- a/system.tex
+++ b/system.tex
@@ -129,6 +129,9 @@
 \section{Security}
 \label{sec:security}
 
+
+\paragraph{} We will now evaluate the security of our scheme. At first, we work under the assumption that discovery identifiers are correctly linked to the users that own them. We then discuss ways in which this assumption can be upheld in practice.
+
 	\subsection{Outlines of security proofs}
 
 	\subsection{Consequences of a breach}
