--- a/commands.tex
+++ b/commands.tex
@@ -17,12 +17,15 @@
 	\newcommand{\Verif}{\ensuremath{\mathsf{Verify}}}
 	\newcommand{\msk}{\mathbf{msk}}
 	\newcommand{\mpk}{\mathbf{mpk}}
+	\newcommand{\Exp}[1]{\mathrm{EXP}({#1})}
 
 
 	% Maths
 	\newcommand{\Pair}[2]{e\left(#1, #2 \right)} % Pairing operation
-	\newcommand{\keyleft}[1]{k_{#1,\mathrm{LEFT}}} % L-R PRFs
-	\newcommand{\keyright}[1]{k_{#1,\mathrm{RIGHT}}} % L-R PRFs
+	
+	% L-R PRFs
+	\newcommand{\keyleft}[1]{k_{#1,\mathrm{LEFT}}}
+	\newcommand{\keyright}[1]{k_{#1,\mathrm{RIGHT}}}
 
 	% Variables
 	\newcommand{\id}{\mathtt{id}}
