created attack tree

--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,8 @@
 	advantage
 ]{cryptocode}
 \usepackage{tabularx}
+\usepackage{forest}
+\usepackage[bottom]{footmisc}
 % TODO add code (package minted)
 % \usepackage{minted}
 
