--- a/references.bib
+++ b/references.bib
@@ -104,6 +104,16 @@ note = {}
 
 
 
+MISC ---------------------------------------------------------------------
+
+@misc {attacktree,
+author = {Bruce Schneier},
+title = {Attack Trees},
+howpublished = {\textit{Dr. Dobb's Journal}},
+month = {December},
+year = {1999},
+note = {Retrived online from \url{https://www.schneier.com/academic/archives/1999/12/attack_trees.html}}
+}
 
 
 
