updated custom commands

--- a/commands.tex
+++ b/commands.tex
@@ -18,6 +18,7 @@
 	\newcommand{\msk}{\mathbf{msk}}
 	\newcommand{\mpk}{\mathbf{mpk}}
 	\newcommand{\Exp}[1]{\mathrm{EXP}({#1})}
+	\newcommand{\Tadv}{\mathcal{T}}
 
 
 	% Maths
