minor changes to attack tree

--- a/figures/attacktree.tex
+++ b/figures/attacktree.tex
@@ -15,7 +15,7 @@ for tree={
     	[Break security\\ property of $F$\\ (definition \autoref{def:lrPRFsec})]
     	[Obtain $s$]
     	[{Obtain $A$'s\\ constraining keys}
-    		[Forge BLS signatures]
+    		[Forge BLS signatures\\ on $\id_A$]
     		[Impersonate $A$]
     	]
     ]
